Table pc {
  id INT [pk, increment]
  marqueId INT
  osId INT
  disqueGB INT
  ramGB INT
  dateAchat DATE
  user VARCHAR(255)
}

Table marque {
  id INT [pk, increment]
  nom VARCHAR(255)
}

Table os {
  id INT [pk, increment]
  nom VARCHAR(255)
}

Table logiciel_instal {
  id INT [pk, increment]
  pcId INT
  logicielId INT
  techInstal INT
}

Table logiciel {
  id INT [pk, increment]
  nom VARCHAR(255)
  licence VARCHAR(255)
  version VARCHAR(255)
}

Table technicien {
  id INT [pk, increment]
  nom VARCHAR(255)
  dateInterv DATE
  pcInterv INT
}

Table maj {
  id INT [pk, increment]
  pcMaj INT
  techMaj INT
  dateMaj DATE
}

ref: logiciel_instal.pcId > pc.id
ref: logiciel_instal.logicielId > logiciel.id
ref: pc.marqueId > marque.id
ref: pc.osId > os.id
ref: maj.pcMaj > pc.id
ref: maj.techMaj > technicien.id
ref: technicien.pcInterv > pc.id
ref: logiciel_instal.techInstal > technicien.id
